--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
                                     </div>
                                     <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                                        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="subBtn">
+                                        <input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="subBtn">
                                     </div>
                                 </div>
                                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_66d3ca932ee7b025ebb7ede53_366f29e352" tabindex="-1" value=""></div>
