--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     an extra “oomph”
                 </h2>
                 <p class="ms-layer tableP2"
-                   style="top:270px;right: 110px;font-family:'Raleway-Light';font-size:20px;letter-spacing:0.150em"
+                   style="top:270px;right: 110px;font-family:'Raleway-Light';font-size:20px;letter-spacing:0.150em;text-transform:uppercase"
                    data-type="text">Julien Froger, Founder L'Imperatrice</p>
 
                 <div class="ms-layer brand-btn"
@@ -270,7 +270,7 @@
         <div class="container">
             <div class="row">
                 <h3 style="margin-bottom:16px">Signup for Newsletter</h3>
-                <div class="udertext">Receive exclusive offerings. Privacy Guaranteed</div>
+                <div class="udertext">Receive exclusive offerings. Privacy guaranteed.</div>
             </div>
             <div class="row" >
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -331,7 +331,7 @@
                     <h3>The Zalto brand</h3>
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
-                    <div class="aboutTxt">The beautiful line of handcrafted Zalto Denk'Art glasses, elevates your daily wine experience. From wine novices to serious collectors and wine professionals, Zalto has garnered a passionate and loyal following worldwide. Join us in a toast and discover the excellence of Zalto glasses.</div>
+                    <div class="aboutTxt">The beautiful line of handcrafted Zalto Denk'Art glasses, elevates your daily wine experience. From wine novices to serious collectors and wine professionals, Zalto has garnered a passionate and loyal following worldwide.<br /> Join us in a toast and discover the excellence of Zalto glasses.</div>
                 </div>
             </div>
             <div class="row">
