--- a/theglassware.html
+++ b/theglassware.html
@@ -313,7 +313,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-lg-5 col-md-5 col-sm-6 col-xs-6">
+                <div class="col-lg-5 col-md-5 col-sm-6 col-xs-6" style="padding-top: 22px;">
                     <div class="foot-img">
                         <img src="images/MYH_finewines_Logo_footer.png" alt="MYH" />
                         <img src="images/zalto denkart_no background_footer.png" alt="Zalto" />
@@ -323,16 +323,21 @@
                 </div>
                 <div class="col-lg-7 col-md-7 col-sm-6 col-xs-6">
                     <div class="row">
-                        <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+                        <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12" style="padding-top: 22px;">
                             <div class="foot-cont-txt margtp"><span style="font-family:'Raleway-Medium'">Hong Kong/Macau:</span><br />Ming Ying Hui (Hong Kong) Trading Ltd.<br /> 銘英會(香港)貿易有限公司</div>
                             <div class="foot-cont-txt" style="margin-bottom:0;"><span style="font-family:'Raleway-Medium'">Mainland China:</span><br />Ming Ying Hui (Beijing) Trading Ltd.<br /> 銘英會(北京)貿易有限公司</div>
                         </div>
-                        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
-                            <div class="foot-info-txt botMargin2 margtp">Hong Kong<span style="font-family:'Roboto-Light';">+852 8120 7488</span> <br />Mainland China <span style="font-family:'Roboto-Light';">+86 (10) 6568 3631</span></div>
+                        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 undercover">
+                            <div class="foot-info-txt botMargin2 margtp">Hong Kong<span style="font-family:'Roboto-Light';white-space:nowrap;"> +852 8120 7488</span> <br />Mainland China <span style="font-family:'Roboto-Light';white-space:nowrap;">+86 (10) 6568 3631</span></div>
+                            <div class="wechat">
+                                <div class="wechat-logo"><img src="images/WeChat-Logo.png" /></div>
+                                <div class="wechat-txt">myhfinewines</div>
+                            </div>
                             <div class="foot-info-txt">sales@myhfinewines.com<br />www.myhfinewines.com</div>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </footer>
