--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
             </div>
             <div class="navbar-collapse" id="navbar-collapse-1">
                 <ul class="nav navbar-nav ">
-                    <li class="current"><a href="index.html">HOME</a></li>
+                    <li ><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ZALTO GLASSWARE<span class="caret"></span></a>
@@ -50,7 +50,7 @@
                             <li><a href="thepraise.html">THE PRAISE</a></li>
                         </ul>
                     </li>
-                    <li><a href="contact.html">CONTACT US</a></li>
+                    <li class="current"><a href="contact.html">CONTACT US</a></li>
                 </ul>
                 <div class="lang-cont Desktop">
                     <a href="index.html" class="lang">ENGLISH</a>|
@@ -106,7 +106,7 @@
                                     <div class="mc-field-group input-group">
                                         <div class="row">
                                             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                                                <input type="radio" value="Consumer" name="RADIOAREA" autofocus id="mce-RADIOAREA-0"><label for="mce-RADIOAREA-0">Consumer</label>
+                                                <input type="radio" value="Consumer" name="RADIOAREA" checked id="mce-RADIOAREA-0"><label for="mce-RADIOAREA-0">Consumer</label>
                                                 <input type="radio" value="Media" name="RADIOAREA" id="mce-RADIOAREA-1"><label for="mce-RADIOAREA-1">Media</label>
                                             </div>
                                             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -139,7 +139,7 @@
                                         <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
                                             <div class="mc-field-group input-group" id="citygroup">
                                                 <div class="row">
-                                                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12"><input type="checkbox" value="1" name="group[20113][1]" id="mce-group[20113]-20113-0"><label for="mce-group[20113]-20113-0">HK</label></div>
+                                                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12"><input type="checkbox" value="1" checked name="group[20113][1]" id="mce-group[20113]-20113-0"><label for="mce-group[20113]-20113-0">HK</label></div>
                                                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><input type="checkbox" value="2" name="group[20113][2]" id="mce-group[20113]-20113-1"><label for="mce-group[20113]-20113-1">Macau</label></div>
                                                     <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 no-paddings" style="margin-bottom: 16px;"><input type="checkbox" value="4" name="group[20113][4]" class="mainChina" id="mce-group[20113]-20113-2"><label for="mce-group[20113]-20113-2">Mainland China</label></div>
                                                 </div>
@@ -152,7 +152,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="mc-field-group">
+                                    <div class="mc-field-group hideJs">
                                         <input type="text" value="" name="WEBSITE" class="placeholderimit" id="mce-WEBSITE">
                                         <label for="mce-WEBSITE" class="placeholderobj">Website</label>
                                     </div>
