--- a/contact.html
+++ b/contact.html
@@ -88,19 +88,19 @@
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                             <div class="mc-field-group">
-                                                <input type="text" value="" name="FNAME" class="placeholderimit" id="mce-FNAME">
+                                                <input type="text" value="" name="FNAME" class="placeholderimit required" id="mce-FNAME">
                                                 <label for="mce-FNAME" class="placeholderobj">First Name</label>
                                             </div>
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                             <div class="mc-field-group">
-                                                <input type="text" value="" name="LNAME" class="placeholderimit" id="mce-LNAME">
+                                                <input type="text" value="" name="LNAME" class="placeholderimit required" id="mce-LNAME">
                                                 <label for="mce-LNAME" class="placeholderobj">Last Name</label>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="mc-field-group">
-                                        <input type="email" value="" name="EMAIL" class="email placeholderimit" id="mce-EMAIL">
+                                        <input type="email" value="" name="EMAIL" class="email placeholderimit required" id="mce-EMAIL">
                                         <label for="mce-EMAIL" class="placeholderobj">Email Address</label>
                                     </div>
                                     <div class="mc-field-group input-group">
@@ -120,19 +120,19 @@
                                         </div>
                                     </div>
                                     <div class="mc-field-group hideJs">
-                                        <input type="text" value="" name="COMPANAM" class="placeholderimit" id="mce-COMPANAM">
+                                        <input type="text" value="" name="COMPANAM" class="placeholderimi requiredt" id="mce-COMPANAM">
                                         <label for="mce-COMPANAM" class="placeholderobj">Company Name</label>
                                     </div>
                                     <div class="mc-field-group hideJs">
-                                        <input type="text" value="" name="TITLE" class="placeholderimit" id="mce-TITLE">
+                                        <input type="text" value="" name="TITLE" class="placeholderimit required" id="mce-TITLE">
                                         <label for="mce-TITLE" class="placeholderobj">Title</label>
                                     </div>
                                     <div class="mc-field-group">
-                                        <input type="text" value="" name="PHONE" class="placeholderimit" id="mce-PHONE">
+                                        <input type="text" value="" name="PHONE" class="placeholderimit required" id="mce-PHONE">
                                         <label for="mce-PHONE" class="placeholderobj">Phone</label>
                                     </div>
                                     <div class="mc-field-group hideJs">
-                                        <input type="text" value="" name="ADDRESS" class="placeholderimit" id="mce-ADDRESS">
+                                        <input type="text" value="" name="ADDRESS" class="placeholderimit required" id="mce-ADDRESS">
                                         <label for="mce-ADDRESS" class="placeholderobj">Address</label>
                                     </div>
                                     <div class="row">
@@ -148,13 +148,13 @@
                                         <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
                                             <div class="mc-field-group">
                                                 <input type="text" value="" disabled name="NCITY" class="placeholderimit" id="mce-NCITY">
-                                                <label for="mce-NCITY" class="placeholderobj">Name of City</label>
+                                                <label for="mce-NCITY" class="placeholderobj nostar">Name of City</label>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="mc-field-group hideJs">
                                         <input type="text" value="" name="WEBSITE" class="placeholderimit" id="mce-WEBSITE">
-                                        <label for="mce-WEBSITE" class="placeholderobj">Website</label>
+                                        <label for="mce-WEBSITE" class="placeholderobj nostar">Website</label>
                                     </div>
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
@@ -167,7 +167,7 @@
                                     </div>
                                     <div class="mc-field-group">
                                         <textarea type="text" value="" name="ENQUIRY" class="placeholderimit" id="mce-ENQUIRY"></textarea>
-                                        <label for="mce-ENQUIRY" class="placeholderobj">Enquiry </label>
+                                        <label for="mce-ENQUIRY" class="placeholderobj nostar">Enquiry </label>
                                     </div>
                                     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_66d3ca932ee7b025ebb7ede53_aa85e205bc" tabindex="-1" value=""></div>
                                     <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button contsubbtn mobil-center"></div>
