--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="slogan">MYH Fine Wines will provide a very prompt response to your enquiry</div>
                 </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tempMargin">
                         <!-- Begin MailChimp Signup Form -->
                         <div id="mc_embed_signup">
                             <div class="row">
@@ -105,8 +105,8 @@
                                     </div>
                                     <div class="mc-field-group input-group">
                                         <div class="row">
-                                            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                                                <input type="radio" value="Consumer" name="RADIOAREA" checked id="mce-RADIOAREA-0"><label for="mce-RADIOAREA-0">Consumer</label>
+                                            <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                                                <input type="radio" value="Consumer" name="RADIOAREA" id="mce-RADIOAREA-0"><label for="mce-RADIOAREA-0">Consumer</label>
                                                 <input type="radio" value="Media" name="RADIOAREA" id="mce-RADIOAREA-1"><label for="mce-RADIOAREA-1">Media</label>
                                             </div>
                                             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -119,58 +119,60 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="mc-field-group hideJs">
-                                        <input type="text" value="" name="COMPANAM" class="placeholderimi requiredt" id="mce-COMPANAM">
-                                        <label for="mce-COMPANAM" class="placeholderobj">Company Name</label>
-                                    </div>
-                                    <div class="mc-field-group hideJs">
-                                        <input type="text" value="" name="TITLE" class="placeholderimit required" id="mce-TITLE">
-                                        <label for="mce-TITLE" class="placeholderobj">Title</label>
-                                    </div>
-                                    <div class="mc-field-group">
-                                        <input type="text" value="" name="PHONE" class="placeholderimit required" id="mce-PHONE">
-                                        <label for="mce-PHONE" class="placeholderobj">Phone</label>
-                                    </div>
-                                    <div class="mc-field-group hideJs">
-                                        <input type="text" value="" name="ADDRESS" class="placeholderimit required" id="mce-ADDRESS">
-                                        <label for="mce-ADDRESS" class="placeholderobj">Address</label>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
-                                            <div class="mc-field-group input-group" id="citygroup">
-                                                <div class="row">
-                                                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12"><input type="checkbox" value="1" checked name="group[20113][1]" id="mce-group[20113]-20113-0"><label for="mce-group[20113]-20113-0">HK</label></div>
-                                                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><input type="checkbox" value="2" name="group[20113][2]" id="mce-group[20113]-20113-1"><label for="mce-group[20113]-20113-1">Macau</label></div>
-                                                    <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 no-paddings" style="margin-bottom: 16px;"><input type="checkbox" value="4" name="group[20113][4]" class="mainChina" id="mce-group[20113]-20113-2"><label for="mce-group[20113]-20113-2">Mainland China</label></div>
+                                    <div id="preHide">
+                                        <div class="mc-field-group hideJs">
+                                            <input type="text" value="" name="COMPANAM" class="placeholderimit requiredt" id="mce-COMPANAM">
+                                            <label for="mce-COMPANAM" class="placeholderobj">Company Name</label>
+                                        </div>
+                                        <div class="mc-field-group hideJs">
+                                            <input type="text" value="" name="TITLE" class="placeholderimit required" id="mce-TITLE">
+                                            <label for="mce-TITLE" class="placeholderobj">Job Title</label>
+                                        </div>
+                                        <div class="mc-field-group">
+                                            <input type="text" value="" name="PHONE" class="placeholderimit required" id="mce-PHONE">
+                                            <label for="mce-PHONE" class="placeholderobj">Phone</label>
+                                        </div>
+                                        <div class="mc-field-group hideJs">
+                                            <input type="text" value="" name="ADDRESS" class="placeholderimit required" id="mce-ADDRESS">
+                                            <label for="mce-ADDRESS" class="placeholderobj">Address</label>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+                                                <div class="mc-field-group input-group" id="citygroup">
+                                                    <div class="row">
+                                                        <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12"><input type="checkbox" value="1" name="group[20113][1]" id="mce-group[20113]-20113-0"><label for="mce-group[20113]-20113-0">HK</label></div>
+                                                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><input type="checkbox" value="2" name="group[20113][2]" id="mce-group[20113]-20113-1"><label for="mce-group[20113]-20113-1">Macau</label></div>
+                                                        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 no-paddings" style="margin-bottom: 16px;"><input type="checkbox" value="4" name="group[20113][4]" class="mainChina" id="mce-group[20113]-20113-2"><label for="mce-group[20113]-20113-2">Mainland China</label></div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
+                                                <div class="mc-field-group">
+                                                    <input type="text" value="" disabled name="NCITY" class="placeholderimit" id="mce-NCITY">
+                                                    <label for="mce-NCITY" class="placeholderobj nostar">Name of City</label>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
-                                            <div class="mc-field-group">
-                                                <input type="text" value="" disabled name="NCITY" class="placeholderimit" id="mce-NCITY">
-                                                <label for="mce-NCITY" class="placeholderobj nostar">Name of City</label>
-                                            </div>
+                                        <div class="mc-field-group hideJs">
+                                            <input type="text" value="" name="WEBSITE" class="placeholderimit" id="mce-WEBSITE">
+                                            <label for="mce-WEBSITE" class="placeholderobj nostar">Website</label>
                                         </div>
-                                    </div>
-                                    <div class="mc-field-group hideJs">
-                                        <input type="text" value="" name="WEBSITE" class="placeholderimit" id="mce-WEBSITE">
-                                        <label for="mce-WEBSITE" class="placeholderobj nostar">Website</label>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                                            <div class="mc-field-group input-group">
-                                                <input type="checkbox" value="8" name="group[20117][8]" id="mce-group[20117]-20117-0"><label style="margin-bottom:17px;" for="mce-group[20117]-20117-0">Subscribe to Newsletter</label>
+                                        <div class="row">
+                                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                                                <div class="mc-field-group input-group">
+                                                    <input type="checkbox" value="8" name="group[20117][8]" id="mce-group[20117]-20117-0"><label style="margin-bottom:17px;" for="mce-group[20117]-20117-0">Subscribe to Newsletter</label>
+                                                </div>
                                             </div>
+                                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"></div>
+                                            <div class="newstxt">Receive exclusive offerings. Privacy guaranteed.</div>
                                         </div>
-                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"></div>
-                                        <div class="newstxt">Receive exclusive offerings. Privacy guaranteed.</div>
+                                        <div class="mc-field-group">
+                                            <textarea type="text" value="" name="ENQUIRY" class="placeholderimit" id="mce-ENQUIRY"></textarea>
+                                            <label for="mce-ENQUIRY" class="placeholderobj nostar">Enquiry </label>
+                                        </div>
+                                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_66d3ca932ee7b025ebb7ede53_aa85e205bc" tabindex="-1" value=""></div>
+                                        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button contsubbtn mobil-center"></div>
                                     </div>
-                                    <div class="mc-field-group">
-                                        <textarea type="text" value="" name="ENQUIRY" class="placeholderimit" id="mce-ENQUIRY"></textarea>
-                                        <label for="mce-ENQUIRY" class="placeholderobj nostar">Enquiry </label>
-                                    </div>
-                                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_66d3ca932ee7b025ebb7ede53_aa85e205bc" tabindex="-1" value=""></div>
-                                    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button contsubbtn mobil-center"></div>
                                 </div>
                                 <div id="mce-responses" class="clear">
                                     <div class="response" id="mce-error-response" style="display:none"></div>
