--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,7 @@
                                             <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
                                                 <div class="mc-field-group">
                                                     <input type="text" value="" disabled name="NCITY" class="placeholderimit" id="mce-NCITY">
-                                                    <label for="mce-NCITY" class="placeholderobj nostar">Name of City</label>
+                                                    <label for="mce-NCITY" class="placeholderobj">Name of City</label>
                                                 </div>
                                             </div>
                                         </div>
@@ -163,15 +163,16 @@
                                                     <input type="checkbox" value="8" name="group[20117][8]" id="mce-group[20117]-20117-0"><label style="margin-bottom:17px;" for="mce-group[20117]-20117-0">Subscribe to Newsletter</label>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"></div>
-                                            <div class="newstxt">Receive exclusive offerings. Privacy guaranteed.</div>
+                                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="padding-left:13px">
+                                                <div class="newstxt">Receive exclusive offerings. Privacy guaranteed.</div>
+                                            </div>
                                         </div>
                                         <div class="mc-field-group">
                                             <textarea type="text" value="" name="ENQUIRY" class="placeholderimit" id="mce-ENQUIRY"></textarea>
                                             <label for="mce-ENQUIRY" class="placeholderobj nostar">Enquiry </label>
                                         </div>
                                         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_66d3ca932ee7b025ebb7ede53_aa85e205bc" tabindex="-1" value=""></div>
-                                        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button contsubbtn mobil-center"></div>
+                                        <div class="clear"><input type="submit" value="SUBMIT" name="subscribe" id="mc-embedded-subscribe" class="button contsubbtn mobil-center"></div>
                                     </div>
                                 </div>
                                 <div id="mce-responses" class="clear">
